TL-219: Fix background issue on mobile when menu expands.

--- a/themes/custom/generic_microsite/less/style.less
+++ b/themes/custom/generic_microsite/less/style.less
@@ -497,8 +497,11 @@ body,
 
 .st-content,
 .st-content-inner {
-  background: #FFF;
+  @media (max-width: @screen-sm-max) {
+    background: #FFF;
+  }
   position: relative;
+
 }
 
 .st-container {
